<resources>
    <string name="app_name">MyNews</string>
    <string name="notificationMethods">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="arts">Arts</string>
    <string name="travel">Travel</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="most_popular">Most popular</string>
    <string name="top_stories">Top stories</string>
    <string name="politics">Politics</string>
    <string name="search_query_hint">Search term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="search_btn">Search</string>
    <string name="enable_notifications_once_per_day">Enable notificationMethods (once per day)</string>
    <string name="news_image">News Image</string>
    <string name="other_topics">Other Topics</string>
    <string name="search">Search</string>
    <string name="help_activity">For help contact: roberto.fernandes21@gmail.com</string>
    <string name="about_activity">The source code of this project can be found at: https://github.com/rob9233/MyNews</string>
</resources>
